Fixed overflowing in student submissions modal

--- a/src/uLearn.Web/Content/exercise/student-submissions.css
+++ b/src/uLearn.Web/Content/exercise/student-submissions.css
@@ -1,6 +1,7 @@
 .legacy-page .student-submissions {
     font-size: 15px;
     margin-top: 30px;
+	overflow: auto;
 }
 
 @media(max-width: 720px) {
